--- a/docs/vector_space_models.ipynb
+++ b/docs/vector_space_models.ipynb
@@ -40,18 +40,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: requests in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (2.27.1)\r\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (1.26.8)\r\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (3.3)\r\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (2021.10.8)\r\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (2.0.10)\r\n"
+      "Requirement already satisfied: requests in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (2.27.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (2021.10.8)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (3.3)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (1.26.8)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (2.0.10)\n",
+      "\u001B[33mWARNING: You are using pip version 21.3.1; however, version 22.0.2 is available.\n",
+      "You should consider upgrading via the '/Users/jdchoi/workspace/cs329/venv/bin/python -m pip install --upgrade pip' command.\u001B[0m\n"
      ]
     }
    ],
@@ -74,12 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aesop_link = 'https://raw.githubusercontent.com/emory-courses/computational-linguistics/master/docs/res/aesopfables.json'\n",
-    "aesop_file = 'res/aesopfables.json'\n",
+    "aesop_link = 'https://raw.githubusercontent.com/emory-courses/computational-linguistics/master/res/vsm/aesopfables.json'\n",
+    "aesop_file = '../res/vsm/aesopfables.json'\n",
     "download(aesop_link, aesop_file)"
    ]
   },
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,21 +361,21 @@
     "    D = len(tfs)\n",
     "\n",
     "    for dkey, term_counts in tfs.items():\n",
-    "        out[dkey] = {t: tf  / dfs[t] for t, tf in term_counts.items()}\n",
+    "        out[dkey] = {t: tf * math.log(D / dfs[t]) for t, tf in term_counts.items()}\n",
     "\n",
     "    return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.20930232558139536\n"
+      "19.02357553642621\n"
      ]
     }
    ],
@@ -384,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -421,33 +423,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Androcles 8.0\n",
-      "Emperor 2.0\n",
-      "wandering 1.0\n",
-      "moaning 1.0\n",
-      "flee 1.0\n",
-      "bleeding 1.0\n",
-      "sentenced 1.0\n",
-      "arena 1.0\n",
-      "bounding 1.0\n",
-      "recognised 1.0\n",
-      "fawned 1.0\n",
-      "licked 1.0\n",
-      "story 1.0\n",
-      "Whereupon 1.0\n",
-      "pardoned 1.0\n",
-      "freed 1.0\n",
-      "slave 0.75\n",
-      "paw 0.6666666666666666\n",
-      "thorn 0.6666666666666666\n",
-      "pursue 0.5\n"
+      "Androcles 46.99944584681624\n",
+      "Lion 19.02357553642621\n",
+      "slave 13.465909109196419\n",
+      "Emperor 11.74986146170406\n",
+      "paw 9.55263688436784\n",
+      "thorn 9.55263688436784\n",
+      "loose 8.97727273946428\n",
+      "dog 7.858041163593434\n",
+      "turned 6.471746802473543\n",
+      "forest 5.969117945911732\n",
+      "wandering 5.87493073085203\n",
+      "moaning 5.87493073085203\n",
+      "flee 5.87493073085203\n",
+      "bleeding 5.87493073085203\n",
+      "sentenced 5.87493073085203\n",
+      "arena 5.87493073085203\n",
+      "bounding 5.87493073085203\n",
+      "recognised 5.87493073085203\n",
+      "fawned 5.87493073085203\n",
+      "licked 5.87493073085203\n"
      ]
     }
    ],
@@ -483,6 +485,202 @@
    "metadata": {},
    "source": [
     "Let us define the function `euclidean(x1, x2)` that takes two sparse vectors, `x1` and `x2`, and returns their Euclidean distance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def euclidean(x1: Dict[str, float], x2: Dict[str, float]) -> float:\n",
+    "    t = sum(((s1 - x2.get(term, 0)) ** 2 for term, s1 in x1.items()))\n",
+    "    t += sum((s2 ** 2 for term, s2 in x2.items() if term not in x1))\n",
+    "    return t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7927.330384585347\n",
+      "3806.640318011558\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = tfidfs['Androcles']\n",
+    "x2 = tfidfs['TheAntandtheChrysalis']\n",
+    "x3 = tfidfs['TheAntsandtheGrasshopper']\n",
+    "print(euclidean(x1, x2))\n",
+    "print(euclidean(x2, x3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download another JSON file containing alternative Aesop's fables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "link = 'https://raw.githubusercontent.com/emory-courses/computational-linguistics/master/res/vsm/aesopfables-alt.json'\n",
+    "file = '../res/vsm/aesopfables-alt.json'\n",
+    "download(link, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Ant and the Grasshopper\n",
+      "The Ass and his Purchaser\n",
+      "The Ass and the Lapdog\n",
+      "The Ass in the Lion Skin\n",
+      "The Belly and the Members\n",
+      "The Buffoon and the Countryman\n",
+      "The Crow and the Pitcher\n",
+      "The Dog in the Manger\n",
+      "The Dog and the Shadow\n",
+      "The Eagle and the Arrow\n",
+      "The Fox and the Crow\n",
+      "The Fox and the Goat\n",
+      "The Fox and the Grapes\n",
+      "The Fox and the Lion\n",
+      "The Fox and the Mask\n",
+      "The Hare and the Tortoise\n",
+      "The Hares and the Frogs\n",
+      "The Horse and the Ass\n",
+      "The Lion and the Mouse\n",
+      "The Lion in Love\n",
+      "The Man and the Satyr\n",
+      "Mercury and the Woodman\n",
+      "The Milkmaid and Her Pail\n",
+      "The Old Man and Death\n",
+      "The Old Woman and the Wine-Jar\n",
+      "The One-Eyed Doe\n",
+      "The Peacock and Juno\n",
+      "The Rose and the Amaranth\n",
+      "The Serpent and the Eagle\n",
+      "The Shepherd's Boy\n",
+      "The Sick Lion\n",
+      "The Town Mouse and the Country Mouse\n",
+      "The Trumpeter Taken Prisoner\n",
+      "The Two Pots\n",
+      "The Vain Jackdaw\n",
+      "The Wolf and the Crane\n",
+      "The Wolf and the Lamb\n",
+      "The Wolf in Sheep's Clothing\n"
+     ]
+    }
+   ],
+   "source": [
+    "fables_alt = json.load(open(file))\n",
+    "for f in fables_alt: print(f['title'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['antgrass2.ram', 'TheAssandhisPurchaser2', 'TheAssandtheLapdog2', 'TheAssintheLionSkin', 'TheBellyandtheMembers2', 'TheBuffoonandtheCountryman', 'TheCrowandthePitcher2', 'TheDogintheManger2', 'TheDogandtheShadow2', 'TheEagleandtheArrow2', 'TheFoxandtheCrow2', 'TheFoxandtheGoat2', 'TheFoxandtheGrapes2', 'TheFoxandtheLion', 'TheFoxandtheMask', 'haretort2.ram', 'harefrog2.ram', 'TheHorseandtheAss2', 'TheLionandtheMouse2', 'TheLioninLove2', 'TheManandtheSatyr2', 'MercuryandtheWoodman', 'milkpail2.ram', 'TheOldManandDeath2', 'TheOldWomanandtheWine-Jar', 'TheOne-EyedDoe', 'ThePeacockandJuno', 'TheRoseandtheAmaranth', 'TheSerpentandtheEagle', 'shepherd2.ram', 'TheSickLion2', 'TheTownMouseandtheCountryMouse', 'TheTrumpeterTakenPrisoner2', 'TheTwoPots2', 'TheVainJackdaw', 'TheWolfandtheCrane2', 'TheWolfandtheLamb2', 'TheWolfinSheepsClothing2'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "tfidf_alt = tf_idfs(fables_alt)\n",
+    "print(tfidf_alt.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2\n",
+    "\n",
+    "Write a function `most_similar()` that takes a spare vector representation of a document and find the most similar fable among the ones in [aesopfables.json](https://github.com/emory-courses/computational-linguistics/blob/master/res/vsm/aesopfables.json).\n",
+    "\n",
+    "```python\n",
+    "def most_similar(Y: Dict[str, Dict[str, float]], x: Dict[str, float]) -> str:\n",
+    "    # To be filled\n",
+    "    return ''\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "antgrass2.ram -> TheAntsandtheGrasshopper\n",
+      "TheAssandhisPurchaser2 -> TheSheGoatsandTheirBeards\n",
+      "TheAssandtheLapdog2 -> TheSheGoatsandTheirBeards\n",
+      "TheAssintheLionSkin -> TheSheGoatsandTheirBeards\n",
+      "TheBellyandtheMembers2 -> TheSheGoatsandTheirBeards\n",
+      "TheBuffoonandtheCountryman -> TheBuffoonandtheCountryman2\n",
+      "TheCrowandthePitcher2 -> TheSheGoatsandTheirBeards\n",
+      "TheDogintheManger2 -> TheSheGoatsandTheirBeards\n",
+      "TheDogandtheShadow2 -> TheSheGoatsandTheirBeards\n",
+      "TheEagleandtheArrow2 -> TheSheGoatsandTheirBeards\n",
+      "TheFoxandtheCrow2 -> TheSwallowandtheCrow\n",
+      "TheFoxandtheGoat2 -> TheSheGoatsandTheirBeards\n",
+      "TheFoxandtheGrapes2 -> TheSheGoatsandTheirBeards\n",
+      "TheFoxandtheLion -> TheSheGoatsandTheirBeards\n",
+      "TheFoxandtheMask -> TheSheGoatsandTheirBeards\n",
+      "haretort2.ram -> TheSheGoatsandTheirBeards\n",
+      "harefrog2.ram -> TheHaresandtheLions\n",
+      "TheHorseandtheAss2 -> TheSheGoatsandTheirBeards\n",
+      "TheLionandtheMouse2 -> TheSheGoatsandTheirBeards\n",
+      "TheLioninLove2 -> TheDogsandtheFox\n",
+      "TheManandtheSatyr2 -> TheManandtheSatyr\n",
+      "MercuryandtheWoodman -> TheSheGoatsandTheirBeards\n",
+      "milkpail2.ram -> TheSheGoatsandTheirBeards\n",
+      "TheOldManandDeath2 -> TheSheGoatsandTheirBeards\n",
+      "TheOldWomanandtheWine-Jar -> TheSheGoatsandTheirBeards\n",
+      "TheOne-EyedDoe -> TheSheGoatsandTheirBeards\n",
+      "ThePeacockandJuno -> ThePeacockandJuno2\n",
+      "TheRoseandtheAmaranth -> TheSheGoatsandTheirBeards\n",
+      "TheSerpentandtheEagle -> TheSheGoatsandTheirBeards\n",
+      "shepherd2.ram -> shepwolf2.ram\n",
+      "TheSickLion2 -> TheSheGoatsandTheirBeards\n",
+      "TheTownMouseandtheCountryMouse -> TheSheGoatsandTheirBeards\n",
+      "TheTrumpeterTakenPrisoner2 -> TheSheGoatsandTheirBeards\n",
+      "TheTwoPots2 -> TheSheGoatsandTheirBeards\n",
+      "TheVainJackdaw -> TheSheGoatsandTheirBeards\n",
+      "TheWolfandtheCrane2 -> TheWolfandtheCrane\n",
+      "TheWolfandtheLamb2 -> TheSheGoatsandTheirBeards\n",
+      "TheWolfinSheepsClothing2 -> TheSheGoatsandTheirBeards\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, x in tfidf_alt.items():\n",
+    "    t = most_similar(tfidfs, x)\n",
+    "    print('{} -> {}'.format(k, t))"
    ]
   },
   {
