--- a/docs/part_of_speech_tagging.ipynb
+++ b/docs/part_of_speech_tagging.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part-of-Speech Tags\n",
+    "# Part-of-Speech Tagging\n",
     "\n",
     "## References\n",
     "\n",
@@ -81,121 +81,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Download Data\n",
-    "\n",
-    "Retrieve the path to the `cs329` project:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/jdchoi/workspace/cs329/doc\n",
-      "/Users/jdchoi/workspace/cs329 <class 'pathlib.PosixPath'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "path = Path.cwd()\n",
-    "print(path)\n",
-    "\n",
-    "while path.name != 'cs329':\n",
-    "    path = path.parent\n",
-    "\n",
-    "print(path, type(path))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* [`pathlib`](https://docs.python.org/3/library/pathlib.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create the `dat/pos` directory under the `cs329` project:"
+    "## Download Data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/jdchoi/workspace/cs329/dat/pos\n"
-     ]
-    }
-   ],
-   "source": [
-    "path /= 'dat/pos'\n",
-    "path.mkdir(parents=True, exist_ok=True)\n",
-    "print(path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* [`Path.mkdir()`](https://docs.python.org/3/library/pathlib.html#pathlib.Path.mkdir)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Download the [training set](https://raw.githubusercontent.com/emory-courses/cs329/master/dat/pos/wsj-pos.trn.gold.tsv) and the [development set](https://raw.githubusercontent.com/emory-courses/cs329/master/dat/pos/wsj-pos.dev.gold.tsv) for part-of-speech tagging:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import requests\n",
     "\n",
     "def download(remote_addr: str, local_addr: str):\n",
     "    r = requests.get(remote_addr)\n",
+    "    fin = open(local_addr, 'wb')\n",
+    "    fin.write(r.content)\n",
     "\n",
-    "    with open(local_addr, 'wb') as fin:\n",
-    "        fin.write(r.content)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* [`requests`](https://requests.readthedocs.io/en/master/user/quickstart/)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "url = 'https://raw.githubusercontent.com/emory-courses/cs329/master/dat/pos/wsj-pos.{}.gold.tsv'\n",
-    "\n",
+    "url = 'https://raw.githubusercontent.com/emory-courses/cs329/master/res/pos/wsj-pos.{}.gold.tsv'\n",
+    "path = '../res/pos/'\n",
     "remote = url.format('trn')\n",
-    "download(remote, path / Path(remote).name)\n",
+    "download(remote, os.path.join(path, os.path.basename(remote)))\n",
     "\n",
     "remote = url.format('dev')\n",
-    "download(remote, path / Path(remote).name)"
+    "download(remote, os.path.join(path, os.path.basename(remote)))"
    ]
   },
   {
@@ -209,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +152,7 @@
     }
    ],
    "source": [
-    "trn_data = read_data(path / 'wsj-pos.trn.gold.tsv')\n",
+    "trn_data = read_data(os.path.join(path, 'wsj-pos.trn.gold.tsv'))\n",
     "print(len(trn_data))\n",
     "print(trn_data[0])"
    ]
@@ -561,7 +470,7 @@
     }
    ],
    "source": [
-    "dev_data = read_data(path / 'wsj-pos.dev.gold.tsv')\n",
+    "dev_data = read_data(os.path.join(path, 'wsj-pos.dev.gold.tsv'))\n",
     "evaluate_uni_pos(uni_pos_dict, dev_data)"
    ]
   },
@@ -782,13 +691,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [],
@@ -832,13 +734,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
    "outputs": [],
@@ -865,13 +760,6 @@
     "    print('{:5.2f}% - uni_pos: {:3.1f}, bi_pos: {:3.1f}, bi_wp: {:3.1f}, bi_np: {:3.1f}'.format(accuracy, uni_pos_weight, bi_pos_weight, bi_wp_weight, bi_wn_weight))\n",
     "    return accuracy"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1167,7 +1055,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1181,7 +1069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
