--- a/docs/part_of_speech_tagging.ipynb
+++ b/docs/part_of_speech_tagging.ipynb
@@ -625,6 +625,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 3) (2, 4)\n",
+      "(1, 3) (2, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [(1,2), (3,4)]\n",
+    "a, b = zip((1,2), (3,4))\n",
+    "print(a,b)\n",
+    "c, d = zip(*l)\n",
+    "print(c,d)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
