--- a/docs/named_entity_recognition.ipynb
+++ b/docs/named_entity_recognition.ipynb
@@ -338,6 +338,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6598ea7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77\n",
+      "98.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'Jinho Choi is a professor at Emory University in the United States of America'\n",
+    "print(len(s))\n",
+    "print(len(s.split())*len(s.split())/2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "qualified-comment",
    "metadata": {},
@@ -397,8 +418,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pyahocorasick in /Users/jdchoi/workspace/cs329/venv/lib/python3.9/site-packages (1.4.1)\n",
-      "\u001b[33mWARNING: You are using pip version 20.3.3; however, version 21.0.1 is available.\n",
-      "You should consider upgrading via the '/Users/jdchoi/workspace/cs329/venv/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+      "\u001B[33mWARNING: You are using pip version 20.3.3; however, version 21.0.1 is available.\n",
+      "You should consider upgrading via the '/Users/jdchoi/workspace/cs329/venv/bin/python -m pip install --upgrade pip' command.\u001B[0m\n"
      ]
     }
    ],
