--- a/docs/vector_space_models.ipynb
+++ b/docs/vector_space_models.ipynb
@@ -496,7 +496,7 @@
     "def euclidean(x1: Dict[str, float], x2: Dict[str, float]) -> float:\n",
     "    t = sum(((s1 - x2.get(term, 0)) ** 2 for term, s1 in x1.items()))\n",
     "    t += sum((s2 ** 2 for term, s2 in x2.items() if term not in x1))\n",
-    "    return t"
+    "    return math.sqrt(t)"
    ]
   },
   {
